<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Access"
        android:id="@+id/Entrophy"
        android:onClick="clickButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SetPassword"
        android:text="@string/SetPassword"
        android:onClick="clickButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:id="@+id/Result"
        android:onClick="clickButton" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senalar"
        android:id="@+id/señal"
        android:labelFor="@string/senalar"
        android:enabled="true"
        android:onClick="clickSignalCheckbox" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphabetTypesName" />

    <Spinner
        android:id="@+id/alphabetsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/alphabetTypes" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/velocidad"
            android:id="@+id/textoVelocidad"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/etiquetaVelocidad"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="7" />



</LinearLayout>